--- a/Inicio.html
+++ b/Inicio.html
@@ -7,8 +7,15 @@
     <title>InicioDeSesion</title>
 </head>
 <body>
+    <div class=""></div>
+    <li>
+        <ul>merchan es tonto</ul>
+        <ul><a href="www.google.com"></a></ul>
+        <ul><a href="www.google.com"></a></ul>
+        <ul><a href="www.google.com"></a></ul>                
+    </li>
     <form action="post">
-        
+        <input type="text" name="txtNombre">
     </form>
 </body>
 </html>
