--- a/Inicio.html
+++ b/Inicio.html
@@ -10,6 +10,8 @@
     <div class=""></div>
     <li>
         <ul>merchan es tonto</ul>
+        <h1>Pa empezar merchan es muy tonto</h1>
+        <input type="text" name="txtKaka">
         <ul><a href="www.google.com"></a></ul>
         <ul><a href="www.google.com"></a></ul>
         <ul><a href="www.google.com"></a></ul>                
