--- a/Inicio.html
+++ b/Inicio.html
@@ -12,6 +12,7 @@
         <ul>merchan es tonto</ul>
         <h1>Pa empezar merchan es muy tonto</h1>
         <h1>Prueba de casa</h1>
+        <h1>Prueba para cole</h1>
         <input type="text" name="txtKaka">
         <ul><a href="www.google.com"></a></ul>
         <ul><a href="www.google.com"></a></ul>
