--- a/Inicio.html
+++ b/Inicio.html
@@ -15,6 +15,7 @@
         <h1>Prueba para cole</h1>
 
         <h1>Prueba ramaPrueba</h1>
+        <h1>Prueba ramaPrueba2 fetch a la rama de clase</h1>
         <input type="text" name="txtKaka">
         <ul><a href="www.google.com"></a></ul>
         <ul><a href="www.google.com"></a></ul>
