Añadimos input text y password, necesitamos php

--- a/Inicio.html
+++ b/Inicio.html
@@ -1,3 +1,7 @@
+<?php
+
+?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,23 +10,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InicioDeSesion</title>
 </head>
-<body>
-    <div class=""></div>
-    <li>
-        <ul>merchan es tonto</ul>
-        <h1>Pa empezar merchan es muy tonto</h1>
-        <h1>Prueba de casa</h1>
-        <h1>Prueba para cole</h1>
-
-        <h1>Prueba ramaPrueba</h1>
-        <h1>Prueba ramaPrueba2 fetch a la rama de clase</h1>
-        <input type="text" name="txtKaka">
-        <ul><a href="www.google.com"></a></ul>
-        <ul><a href="www.google.com"></a></ul>
-        <ul><a href="www.google.com"></a></ul>                
-    </li>
-    <form action="post">
+<body>             
+    <form action="Inicio.html" method="POST">
         <input type="text" name="txtNombre">
+<input type="password" name="txtPassword">
     </form>
 </body>
 </html>
