--- a/Inicio.html
+++ b/Inicio.html
@@ -5,15 +5,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
     <title>InicioDeSesion</title>
 </head>
-<body>             
-    <form action="Inicio.html" method="POST">
-        <input type="text" name="txtNombre">
-<input type="password" name="txtPassword">
-    </form>
+<body>
+    <div class="container">  
+        <h3>Inicio de Sesion</h3>  
+        <form action="Inicio.html" method="POST">
+            <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                <input id="email" type="text" class="form-control" name="email" placeholder="Email">
+              </div>
+            <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                <input id="password" type="password" class="form-control" name="password" placeholder="Password">
+              </div>
+        </form>
+    </div> 
 </body>
 </html>
