--- a/Inicio.html
+++ b/Inicio.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">  
         <h3>Inicio de Sesion</h3>  
-        <form action="Inicio.html" method="POST">
+        <form action="Inicio.html" method="POST" class="container">
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                 <input id="email" type="text" class="form-control" name="email" placeholder="Email">
