prueba de rama IDSC

--- a/Inicio.html
+++ b/Inicio.html
@@ -15,7 +15,8 @@
 </head>
 <body>
     <div class="container">  
-        <h3>Inicio de Sesion</h3>  
+        <h3>Inicio de Sesion</h3> 
+        <h1>Prueba de rama</h1> 
         <form action="Inicio.html" method="POST" class="container">
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
