titulo y mensaje derecho codif, script js borrado

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Form by Tooplate</title>
+    <title>DBFZ 23RD TOURNAMENT</title>
 	<!--
     Template 2105 Input
 	http://www.tooplate.com/view/2105-input
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row tm-register-row tm-mb-35">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-login-l">
-                <form action="" method="post" class="tm-bg-black p-5 h-100">
+                <form action="PaginaPrinc.php" method="post" class="tm-bg-black p-5 h-100">
                     <div class="input-field">
                         <input placeholder="Username" id="username" name="username" type="text" class="validate">
                     </div>
@@ -35,7 +35,7 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-login-r">
                 <header class="font-weight-light tm-bg-black p-5 h-100">
-                    <h3 class="mt-0 text-white font-weight-light">Your Login</h3>
+                    <h3 class="mt-0 text-white font-weight-light">DBFZ 23RD TOURNAMENT</h3>
                     <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                     <p class="mb-0">Vestibulum neque neque, porttitor quis lacinia eu, iaculis id dui. Mauris quis velit lectus.</p>
                 </header>
@@ -57,14 +57,6 @@
             </div>
         </footer>
     </div>
-
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
-    <script src="js/materialize.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('select').formSelect();
-        });
-    </script>
 </body>
 
 </html>
