--- a/Inicio.html
+++ b/Inicio.html
@@ -1,7 +1,3 @@
-<?php
-
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,8 +12,7 @@
 <body>
     <div class="container">  
         <h3>Inicio de Sesion</h3> 
-        <h1>Prueba de rama</h1> 
-        <form action="Inicio.html" method="POST" class="container">
+        <form action="PaginaPrinc.php" method="POST" class="container">
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                 <input id="email" type="text" class="form-control" name="email" placeholder="Email">
@@ -26,6 +21,7 @@
                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                 <input id="password" type="password" class="form-control" name="password" placeholder="Password">
               </div>
+              <input type="submit" name="btSubir" id="btSubir" value="Iniciar sesion">
         </form>
     </div> 
 </body>
