--- a/login.html
+++ b/login.html
@@ -49,10 +49,7 @@
         <footer class="row tm-mt-big mb-3">
             <div class="col-xl-12 text-center">
                 <p class="d-inline-block tm-bg-black white-text py-2 tm-px-5">
-                    Copyright &copy; 2018 Company Name 
-                    
-                    - <a rel="nofollow" href="http://www.tooplate.com/view/2105-input">Input</a> by 
-                    <a rel="nofollow" href="http://tooplate.com" class="tm-footer-link">Tooplate</a>
+                    Copyright &copy; 2018 Iban & Merchan
                 </p>
             </div>
         </footer>
